--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -15,7 +15,7 @@
       --glass-border: rgba(255,255,255,0.6);
       --card-shadow: 0 10px 30px rgba(18,24,38,0.08);
       --accent: #4a90e2;
-    }
+    } 
     body {
       margin: 0;
       padding: 0;
@@ -25,7 +25,6 @@
       color: #1e1c1c;
       min-height: 100vh;
     }
-    /* Navbar styling (same as project.html) */
     .navbar {
   display: flex;
   justify-content: space-between;
@@ -44,7 +43,7 @@
     }
 
     
-    /* Glassmorphism effect for trip container */
+    /* Glassmorphism effect*/
     .container {
       max-width: 900px;
       margin: 40px auto 20px auto;
