--- a/project.html
+++ b/project.html
@@ -129,8 +129,9 @@
 
     <div class="features">
       <a href="aboutus.html" class="card"> 👥 About us </a>
-      <div class="card">☀ Get Weather Updates</div>
+      <a href="weather.html" class="card">☀ Get Weather Updates</a>
       <a href="share-experience.html" class="card">🤝 Share Experience</a>
+       
     </div>
   </section>
 
