--- a/Vrindavan.html
+++ b/Vrindavan.html
@@ -242,7 +242,7 @@
 
              <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                 <div class="card-image-container">
-                    <img src="https://up.yimg.com/ib/th/id/OIP.swexb_-iDCbh_esX0ORf_gHaFj?pid=Api&rs=1&c=1&qlt=95&w=150&h=112 alt="Prem Mandir - Temple of Divine Love">
+                    <img src="https://tse1.mm.bing.net/th/id/OIP.D9mZfKsPAP9I-Pb92x3K6QHaE8?pid=Api&P=0&h=180"Prem Mandir - Temple of Divine Love">
                 </div>
                 <div class="card-content">
                     <h3>Prem Mandir</h3>
