make new page bodhgaya.html

--- a/Amritsar.html
+++ b/Amritsar.html
@@ -174,7 +174,7 @@
 </head>
 <body>
     <div class="wrap">
-        <a href="project.html" class="back-btn">
+        <a href="pilgrimage.html" class="back-btn">
             <span>←</span> Back to Pilgrimage Destinations
         </a>
 
