--- a/aboutus.html
+++ b/aboutus.html
@@ -5,9 +5,233 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="aboutus.css">
+    <title>About Plan & Go - Travel Smart</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <style>
+        /* --- Color Variables for Dark Neon Theme --- */
+        :root {
+            --dark-bg-start: #1f1c2c; /* Deep Dark Blue/Purple */
+            --dark-bg-end: #3d3b4b; /* Slightly lighter Dark */
+            --text-light: #f0f8ff;
+            --text-muted: #d1d5db;
+            --neon-accent: #00FFFF; /* Bright Aqua/Cyan Neon */
+            --primary-color: #3f51b5; /* Deep Violet Blue */
+            --card-dark: rgba(30, 27, 38, 0.9);
+            --card-border: rgba(0, 255, 255, 0.2);
+            --accent-glow: 0 0 10px rgba(0, 255, 255, 0.5), 0 0 20px rgba(0, 255, 255, 0.3);
+        }
+
+        /* --- Base Styles --- */
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, var(--dark-bg-start), var(--dark-bg-end));
+            color: var(--text-light);
+            line-height: 1.6;
+            min-height: 100vh;
+        }
+
+        /* --- Header Styles --- */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 70px;  
+            padding: 0 50px; 
+            background: rgba(30, 27, 38, 0.8); /* Dark background for header */
+            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        header h1 {
+            font-size: 26px;
+            font-weight: 800;
+            color: var(--neon-accent);
+            letter-spacing: 1px;
+            text-shadow: 0 0 8px rgba(0, 255, 255, 0.5);
+        }
+
+        header nav ul {
+            list-style: none;
+            display: flex;
+            margin: 0;
+            padding: 0;
+        }
+
+        header nav ul li a {
+            margin-left: 25px;
+            text-decoration: none;  
+            color: var(--text-light);
+            font-weight: 600;
+            font-size: 16px;
+            transition: color 0.3s, text-shadow 0.3s;
+        }
+
+        header nav ul li a:hover {
+            color: var(--neon-accent);
+            text-shadow: 0 0 5px rgba(0, 255, 255, 0.8);
+        }
+
+        /* --- Section Styling --- */
+        h2 {
+            text-align: center;
+            font-size: 2.8rem;
+            font-weight: 800;
+            margin-bottom: 3rem;
+            color: var(--neon-accent);
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.4);
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        .about-section {
+            padding: 5rem 2rem;
+        }
+
+        .about-container {
+            max-width: 1200px;
+            margin: auto;
+        }
+
+        /* --- About Content Layout --- */
+        .about-content {
+            display: flex;
+            gap: 4rem;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            background: var(--card-dark);
+            padding: 40px;
+            border-radius: 20px;
+            border: 1px solid var(--card-border);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+        }
+
+        .about-text {
+            flex: 2;
+            font-size: 1.1rem;
+            color: var(--text-muted);
+            min-width: 300px;
+            font-family: 'Poppins', sans-serif;
+        }
+        
+        .about-text p {
+            margin-bottom: 20px;
+        }
+
+        .about-images {
+            flex: 1;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+            min-width: 250px;
+        }
+
+        .about-images img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+            border: 2px solid rgba(0, 255, 255, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .about-images img:hover {
+            transform: scale(1.08);
+            box-shadow: var(--accent-glow);
+        }
+
+        /* --- Team Section Styles --- */
+        .team {
+            padding: 60px 20px;
+        } 
+
+        .team-container {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            flex-wrap: wrap;
+        }
+
+        .team-member {
+            text-align: center;
+            background-color: var(--card-dark);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+            border: 1px solid var(--card-border);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 250px;
+        }
+
+        .team-member:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7), var(--accent-glow);
+        }
+
+        .team-member img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            margin-bottom: 15px;
+            object-fit: cover;
+            border: 3px solid var(--neon-accent);
+            transition: transform 0.3s ease, border-color 0.3s;
+        }
+
+        .team-member:hover img {
+            transform: scale(1.05);
+            border-color: var(--primary-color);
+        }
+
+        .team-member h3 {
+            font-size: 1.6rem;
+            margin-bottom: 5px;
+            color: var(--neon-accent);
+        }
+
+        .team-member p {
+            font-size: 1rem;
+            color: var(--text-muted);
+        }
+
+        /* --- Responsive Design --- */
+        @media (max-width: 900px) {
+            .about-content {
+                flex-direction: column;
+                gap: 2rem;
+            }
+            .about-images {
+                order: -1; /* Move images above text on mobile */
+                width: 100%;
+                justify-content: center;
+                gap: 10px;
+            }
+            header {
+                padding: 0 20px;
+            }
+        }
+        @media (max-width: 600px) {
+            header nav ul {
+                display: none; /* Hide nav links on very small screens or consider a hamburger menu */
+            }
+            header h1 {
+                font-size: 22px;
+            }
+            .about-images {
+                 grid-template-columns: 1fr;
+            }
+            .about-images img {
+                height: 200px;
+            }
+            .team-member {
+                width: 100%;
+            }
+        }
+    </style>
 </head> 
 <body>
     <header>
@@ -22,49 +246,46 @@
         </nav>
     </header> 
 
-
     <section class="about-section">
         <div class="about-container">
             <h2>About Us</h2>
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        "Welcome to Plan & Go! We are dedicated to make travel simple, smart, and memorable. 
+                        "Welcome to **Plan & Go**! We are dedicated to make travel **simple, smart, and memorable**. 
                         Our platform helps you plan your trips with ease, and discover exciting destinations—all in one place."
                     </p>
                     <p>
-                        "At Plan & Go, we believe every journey should be stress-free and full of experiences. That's why we've built a platform that lets you create, organize, and share your travel plans effortlessly."
+                        "At Plan & Go, we believe every journey should be **stress-free** and full of experiences. That's why we've built a platform that lets you create, organize, and share your travel plans effortlessly.
                         Whether you're planning a solo trip, a family vacation, or an adventure with friends, Plan & Go is here to guide you every step of the way."
                     </p>
                 </div>
                 <div class="about-images">
-                    <img src="aboutus bg 1.png"  alt="Travel 1">
-                    <img src="about us bg2.png" alt="Travel 2">
+                    <img src="aboutus bg 1.png" alt="Travel Planning">
+                    <img src="about us bg2.png" alt="Destination Discovery">
                 </div>
             </div>
         </div>
     </section>
 
-
     <section class="team">
         <h2>Meet Our Team</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="sejal.png" alt="John">
+                <img src="sejal.png" alt="Sejal">
                 <h3>Sejal</h3>
                 <p>+1 800-123-4567</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/236x/55/c7/cc/55c7cc5d7ae7e121684f1be0a381f965.jpg" alt="Emily">
+                <img src="https://i.pinimg.com/236x/55/c7/cc/55c7cc5d7ae7e121684f1be0a381f965.jpg" alt="Shreya">
                 <h3>Shreya</h3>
                 <p>+1 800-111-2222</p>
             </div>
             <div class="team-member">
-                <img src="srishti.png" alt="Jane">
+                <img src="srishti.png" alt="Srishti">
                 <h3>Srishti</h3>
                 <p>+1 800-987-6543</p>
             </div>
-
         </div>
     </section>
 </body>
